--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
       </ul>
     </section>
 
-    <section class="signup">
+    <!-- <section class="signup">
       <h2>Join the Waitlist</h2>
       <p>Get early access, launch discounts, and exclusive module previews.</p>
-      <!-- Replace this with your actual ConvertKit or Formspree form embed -->
       <form action="https://your-form-service.com" method="POST">
         <input type="email" name="email" placeholder="Your email address" required />
         <button type="submit">Notify Me</button>
       </form>
-    </section>
+    </section> -->
 
     <section class="about">
       <h2>Course Format</h2>
