--- a/index.html
+++ b/index.html
@@ -11,22 +11,136 @@
 <body>
   <div class="container">
     <header>
-      <h1>Learn the Math Behind Diffusion Models — Without Drowning in It</h1>
+      <h1>Diffusion Models: Foundations to Frontiers</h1>
+      <!-- <p class="subheadline">
+        An intuitive yet rigorous course designed to bring AI researchers and engineers from zero to frontier research in diffusion models.
+      </p> -->
       <p class="subheadline">
-        A rigorous, intuitive course that goes beyond the usual "add noise, remove noise" story. Understand <em>why</em> diffusion works so well — from score matching to stochastic sampling.
+        An ambitious yet pragmatic take on generative AI education, designed to bring AI researchers and engineers from zero to frontier research in diffusion models.
       </p>
     </header>
 
     <section class="features">
-      <h2>What You'll Learn</h2>
-      <ul>
-        <li>The <strong>two pillars</strong> behind diffusion’s success: denoising and sampling</li>
-        <li>How denoising encodes the <strong>score function</strong> of the data</li>
-        <li>Why sampling is a <strong>physics-based process</strong>, not a post-hoc trick</li>
-        <li>Practical insights for <strong>training and implementation</strong></li>
-        <li>Visual and code-based explanations of core ideas</li>
-      </ul>
+        <h2>What You'll Learn</h2>
+        <ul>
+          <li>The <strong>two pillars</strong> behind diffusion’s success: denoising and sampling</li>
+          <li>How denoising encodes the <strong>score function</strong> of the data</li>
+          <li>Why sampling is a <strong>physics-based process</strong>, not a post-hoc trick</li>
+          <li>Practical insights for <strong>training and implementation</strong></li>
+          <li>Visual and code-based explanations of core ideas</li>
+        </ul>
     </section>
+
+    
+    <section class="modules">
+        <h2>Course Modules</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Module & Title</th>
+              <th>Topics Covered</th>
+              <th>Key Outcomes</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><strong>0:</strong> Orientation</td>
+              <td>Why Learn Diffusion This Way? • Philosophy of the course • The two-pillar framework • What this course covers (and doesn’t)</td>
+              <td>Understand the course's unique approach and structure</td>
+            </tr>
+            <tr>
+              <td><strong>1:</strong> What Makes Diffusion Different</td>
+              <td>Why not GANs or VAEs? • Diffusion as a process • Stochastic inversion</td>
+              <td>Grasp why diffusion is a paradigm shift in generative modeling</td>
+            </tr>
+            <tr>
+              <td><strong>2:</strong> The First Pillar – Denoising</td>
+              <td>Adding noise • The denoising objective (DDPM) • Conditional vs marginal scores • Visual intuition</td>
+              <td>Learn how denoising is a proxy for the data's gradient field</td>
+            </tr>
+            <tr>
+                <td><strong>3:</strong> Deep Dive – Score Matching Equivalence</td>
+                <td>Deriving the score matching target • Posterior-weighted averages • Why denoising equals score matching • MSE's role</td>
+                <td>Understand the theoretical link between denoising and score matching</td>
+            </tr>
+            <tr>
+              <td><strong>4:</strong> The Second Pillar – Sampling as Physics</td>
+              <td>Langevin dynamics • Generation as "rolling a die" • Connection to SDEs • Inverse problems via noise reversal</td>
+              <td>See sampling not as a trick, but as a simulated physical process</td>
+            </tr>
+            <tr>
+              <td><strong>5:</strong> Connecting It All</td>
+              <td>The full generative loop • How the pillars reinforce each other • Architecture-agnostic benefits • Practical implications</td>
+              <td>Synthesize the two pillars into an end-to-end understanding</td>
+            </tr>
+            <tr>
+              <td><strong>6:</strong> Beyond the Core</td>
+              <td>Classifier guidance • Noise schedules • Diffusion variants (SDEs, EDMs) • Open problems</td>
+              <td>Explore advanced techniques and the current research frontier</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+  </div>
+
+    <section class="testimonials">
+      <div class="container">
+        <h2>What People Are Saying</h2>
+      </div>
+      <div class="tweet-scroller">
+        <div class="tweet-container">
+          <!-- Tweets are duplicated below for the infinite scroll effect -->
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">insanely underrated channel, investing early in this because he has planned to upload a series of videos. <a href="https://t.co/ALWZVOaL6d">pic.twitter.com/ALWZVOaL6d</a></p>&mdash; maharshi (@mrsiipa) <a href="https://twitter.com/mrsiipa/status/1888978858864689347?ref_src=twsrc%5Etfw">February 10, 2025</a></blockquote>
+          </div>
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">If you&#39;re looking for two wonderful explainer videos on diffusion models, look no further! Part 2 looks like a strong contender to win the Summer of Math Exposition Competition initiated by <a href="https://twitter.com/3blue1brown?ref_src=twsrc%5Etfw">@3blue1brown</a>. Thank you <a href="https://twitter.com/WidjajaHaris?ref_src=twsrc%5Etfw">@WidjajaHaris</a> for the tremendous effort these must have taken! <a href="https://t.co/Pf5JrRxgRl">https://t.co/Pf5JrRxgRl</a></p>&mdash; Chris Offner (@chrisoffner3d) <a href="https://twitter.com/chrisoffner3d/status/1936804930741838092?ref_src=twsrc%5Etfw">June 22, 2025</a></blockquote>
+          </div>
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">One of the best visualizations of how diffusion models generate images <br><br>h/t @two_dukes <a href="https://t.co/4lQqMEpQ5A">pic.twitter.com/4lQqMEpQ5A</a></p>&mdash; Anjney Midha 🇺🇸 (@AnjneyMidha) <a href="https://twitter.com/AnjneyMidha/status/1898386018333610443?ref_src=twsrc%5Etfw">March 8, 2025</a></blockquote>
+          </div>
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">the ROI on this investment was totally worth it: he dropped a 52-minute sequel, absolutely amazing! <a href="https://t.co/07wTGpkuHI">https://t.co/07wTGpkuHI</a> <a href="https://t.co/LQAgEZ6n0l">pic.twitter.com/LQAgEZ6n0l</a></p>&mdash; maharshi (@mrsiipa) <a href="https://twitter.com/mrsiipa/status/1937573784258773061?ref_src=twsrc%5Etfw">June 24, 2025</a></blockquote>
+          </div>
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Always helps to learn the intuition first before deep diving into the math part. <br>This video on Diffusion Models serves the perfect recipe in explaining the intuitions behind the workings of a diffusion model. <br>Perfectly explains the 2 pillars of the model and highlights on one… <a href="https://t.co/VFawB6Qlh7">pic.twitter.com/VFawB6Qlh7</a></p>&mdash; Debasish (দেবাশিস্) Ghosh 🇮🇳 (@debasishg) <a href="https://twitter.com/debasishg/status/1938869490890219909?ref_src=twsrc%5Etfw">June 28, 2025</a></blockquote>
+          </div>
+
+          <!-- Duplicates -->
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">insanely underrated channel, investing early in this because he has planned to upload a series of videos. <a href="https://t.co/ALWZVOaL6d">pic.twitter.com/ALWZVOaL6d</a></p>&mdash; maharshi (@mrsiipa) <a href="https://twitter.com/mrsiipa/status/1888978858864689347?ref_src=twsrc%5Etfw">February 10, 2025</a></blockquote>
+          </div>
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">If you&#39;re looking for two wonderful explainer videos on diffusion models, look no further! Part 2 looks like a strong contender to win the Summer of Math Exposition Competition initiated by <a href="https://twitter.com/3blue1brown?ref_src=twsrc%5Etfw">@3blue1brown</a>. Thank you <a href="https://twitter.com/WidjajaHaris?ref_src=twsrc%5Etfw">@WidjajaHaris</a> for the tremendous effort these must have taken! <a href="https://t.co/Pf5JrRxgRl">https://t.co/Pf5JrRxgRl</a></p>&mdash; Chris Offner (@chrisoffner3d) <a href="https://twitter.com/chrisoffner3d/status/1936804930741838092?ref_src=twsrc%5Etfw">June 22, 2025</a></blockquote>
+          </div>
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">One of the best visualizations of how diffusion models generate images <br><br>h/t @two_dukes <a href="https://t.co/4lQqMEpQ5A">pic.twitter.com/4lQqMEpQ5A</a></p>&mdash; Anjney Midha 🇺🇸 (@AnjneyMidha) <a href="https://twitter.com/AnjneyMidha/status/1898386018333610443?ref_src=twsrc%5Etfw">March 8, 2025</a></blockquote>
+          </div>
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">the ROI on this investment was totally worth it: he dropped a 52-minute sequel, absolutely amazing! <a href="https://t.co/07wTGpkuHI">https://t.co/07wTGpkuHI</a> <a href="https://t.co/LQAgEZ6n0l">pic.twitter.com/LQAgEZ6n0l</a></p>&mdash; maharshi (@mrsiipa) <a href="https://twitter.com/mrsiipa/status/1937573784258773061?ref_src=twsrc%5Etfw">June 24, 2025</a></blockquote>
+          </div>
+          <div class="tweet-wrapper">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Always helps to learn the intuition first before deep diving into the math part. <br>This video on Diffusion Models serves the perfect recipe in explaining the intuitions behind the workings of a diffusion model. <br>Perfectly explains the 2 pillars of the model and highlights on one… <a href="https://t.co/VFawB6Qlh7">pic.twitter.com/VFawB6Qlh7</a></p>&mdash; Debasish (দেবাশিস্) Ghosh 🇮🇳 (@debasishg) <a href="https://twitter.com/debasishg/status/1938869490890219909?ref_src=twsrc%5Etfw">June 28, 2025</a></blockquote>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
+  <div class="container">
+
+    <section class="features">
+        <h2>What You'll Learn</h2>
+        <ul>
+          <li>The <strong>two pillars</strong> behind diffusion’s success: denoising and sampling</li>
+          <li>How denoising encodes the <strong>score function</strong> of the data</li>
+          <li>Why sampling is a <strong>physics-based process</strong>, not a post-hoc trick</li>
+          <li>Practical insights for <strong>training and implementation</strong></li>
+          <li>Visual and code-based explanations of core ideas</li>
+        </ul>
+    </section>
+  </div>
+
 
     <!-- <section class="signup">
       <h2>Join the Waitlist</h2>
@@ -36,19 +150,11 @@
         <button type="submit">Notify Me</button>
       </form>
     </section> -->
-
-    <section class="about">
-      <h2>Course Format</h2>
-      <ul>
-        <li>Short videos + PDF guides</li>
-        <li>Math derivations with animations</li>
-        <li>Code examples and intuition-building diagrams</li>
-      </ul>
-    </section>
-
+<div class="container">
     <footer>
       <p>🚀 Launching Fall 2025 • No spam, unsubscribe anytime</p>
     </footer>
   </div>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
